--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,7 +21,7 @@ services:
        image: jonasal/nginx-certbot
        restart: always
        environment:
-        - CERTBOT_EMAIL=name@example.com
+        - CERTBOT_EMAIL=maishm357@gmail.com
        ports:
         - 80:80
         - 443:443
