limited incoming requests to POST endpoint to be 10 requests/second

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -7,7 +7,10 @@ server {
 	}
 }
 
-server { 
+limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+limit_req_status 429; 
+
+server {
 	listen 443 ssl; 
 	server_name maishamiahportfolio.duckdns.org; 
 
@@ -15,6 +18,11 @@ server {
 		proxy_pass http://myportfolio:5000/;
 	}
 	
+	location /api/timeline_post { 
+		limit_req zone=mylimit;
+		proxy_pass http://myportfolio:5000/api/timeline_post
+		
+	}	
 	# Load the certificate files. 
 	ssl_certificate /etc/letsencrypt/live/myportfolio/fullchain.pem;
 	ssl_certificate_key /etc/letsencrypt/live/myportfolio/privkey.pem; 
