fixed problem with nginx (forgot semicolon)

--- a/user_conf.d/myportfolio.conf
+++ b/user_conf.d/myportfolio.conf
@@ -20,8 +20,7 @@ server {
 	
 	location /api/timeline_post { 
 		limit_req zone=mylimit;
-		proxy_pass http://myportfolio:5000/api/timeline_post
-		
+		proxy_pass http://myportfolio:5000/api/timeline_post;		
 	}	
 	# Load the certificate files. 
 	ssl_certificate /etc/letsencrypt/live/myportfolio/fullchain.pem;
