--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
         - name: Configure SSH 
           run: | 
             mkdir -p ~/.ssh/
-            echo "$SSH_PRIVATE_KEY" > ~/.ssh.deploy-key.pem
+            echo "$SSH_PRIVATE_KEY" > ~/.ssh/deploy-key.pem
             chmod 600 ~/.ssh/deploy-key.pem
             cat >> ~/.ssh/config <<END
             Host my-vps 
