--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,3 +28,5 @@ jobs:
              SSH_IP: ${{ secrets.SSH_IP }}
         - name: Print project root directory
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
+        - name: Print Container Status 
+          run: docker compose ps 
