--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,4 @@ jobs:
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
         - name: Print Container Status 
           run: |
-             cd ${{ secrets.PROJECT_ROOT }}
-             docker-compose ps 
+             docker-compose ps | cat
