--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         - name: Print project root directory
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
         - name: Print Container Status 
-          run: cd ${{ secrets.PROJECT_ROOT }} && docker compose ps
+          run: docker compose ps
