--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
         - name: Print Container Status 
           run: |
+             ssh my-vps
              cd $PROJECT_ROOT
              ls -a
              docker-compose ps
