--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,4 @@ jobs:
         - name: Print project root directory
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
         - name: Print Container Status 
-          run: |
-             ssh my-vps
-             cd $PROJECT_ROOT
-             ls -a
-             docker-compose ps
+          run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && docker-compose ps'
