--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,3 +30,5 @@ jobs:
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && pwd'
         - name: Print Container Status 
           run: ssh my-vps 'cd ${{ secrets.PROJECT_ROOT }} && docker compose ps'
+        - name: Send Deployment Notification 
+          run: ssh my-vps 'curl -s -X POST "${{ secrets.DISCORD_WEBHOOK }}" -d "content=🚀 Deployment Successful"'
