--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
        - name: Setup Python 
          uses: actions/setup-python@v4
          with: 
-            python-version: '3.8.10'
+            python-version: '3.12.0-alpha.3'
       
        - name: Setup Python Virtual Environment 
          run: python -m venv python3-virtualenv 
